fixed main page images on mobile

--- a/scss/components/_portfolio.scss
+++ b/scss/components/_portfolio.scss
@@ -1,6 +1,6 @@
 @import 'components/variables';
 
-.clearing {
+.main-images {
   padding-left: 0px;
   padding-right: 0px;
   padding-top: 40px;
@@ -78,7 +78,7 @@ h2:nth-child(2) {
 }
 
 @media (max-width: 1000px) {
-  .clearing {
+  .main-images {
     img {
       height: auto;
       width: auto;
@@ -87,11 +87,10 @@ h2:nth-child(2) {
 }
 
 @media(max-width: 500px) {
-  .main-portfolio {
-    margin-top: 30px;
-  }
 
-.clearing {
+.main-images {
+  padding: 0px;
+  padding-bottom: 20px; 
     article:hover .over-img, article:active .over-img {
       visibility: hidden;
     }
